[gd_scene load_steps=2 format=3 uid="uid://dy5erb1lkxh7t"]

[ext_resource type="Script" path="res://addons/gd_cubism/example/viewer.gd" id="1_wysar"]

[node name="viewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wysar")
metadata/_edit_lock_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptModel" type="OptionButton" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="ItemListMotion" type="ItemList" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -392.0
offset_right = -16.0
offset_bottom = -201.0
grow_horizontal = 0
grow_vertical = 0

[node name="ItemListExpression" type="ItemList" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -184.0
offset_right = -16.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="item_selected" from="UI/OptModel" to="." method="_on_opt_model_item_selected"]
[connection signal="item_selected" from="UI/ItemListMotion" to="." method="_on_item_list_motion_item_selected"]
[connection signal="item_selected" from="UI/ItemListExpression" to="." method="_on_item_list_expression_item_selected"]
